--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,22 @@
 body {
   font-family: 'Cormorant', serif;
 }
+
 .main-title {
   text-align: center;
-  padding: 2em;
+  padding: 1em;
+}
+
+.input-group {
+  margin-bottom: 2em;
+}
+
+td, th {
+  vertical-align: middle !important;
+  text-align: center !important;
+}
+
+td:first-of-type, td:first-of-type > div {
+  height: 200px;
+  width: 250px;
 }
